# Vespula

./: .gitignore  CMakeLists.txt  Makefile  README.md  chorus.cpp  chorus.h  delay.cpp  delay.h  envelopable.h  envelope.cpp  envelope.h  envelopebox.cpp  envelopebox.h  envelopeconnection.cpp  envelopeconnection.h  filter.cpp  filter.h  filterbox.cpp  filterbox.h  filterproxy.cpp  filterproxy.h  fm.cpp  fm.h  fmbox.cpp  fmbox.h  keyboard.cpp  keyboard.h  lfo.cpp  lfo.h  lfoable.cpp  lfoable.h  lfobox.cpp  lfobox.h  lfoconnection.cpp  lfoconnection.h  looper.cpp  looper.h  looperbox.cpp  looperbox.h  lpf.cpp  (+42 more)
gui/: Makefile  keyboard.cpp  keyboard.h  main.cpp  note.h  sawtooth.cpp  sawtooth.h  sine.h  square.cpp  square.h  synthesizer.cpp  synthesizer.h  triangle.cpp  triangle.h  vibrato.cpp  vibrato.h
qt/: keyboard.cpp  keyboard.h  main.cpp  moc_synthesizer.cpp  note.cpp  note.h  sawtooth.cpp  sine.cpp  sine.h  synthesizer.cpp  synthesizer.h  triangle.cpp
